--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
   margin: 0;
   box-sizing: border-box;
 }
-html {
+/* *{
   font-family: "Montserrat", sans-serif;
-}
+} */
 body {
   background: #eee;
   padding: 0 16px;
@@ -56,9 +56,11 @@ footer p {
 }
 
 .cards-container {
+  margin-top: 20px;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
-  gap: 18px;
+  gap: 20px;
   justify-content: center;
   align-items: center;
 }
@@ -67,20 +69,52 @@ footer p {
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 300px;
+  width: 400px;
   overflow: hidden;
 }
 
 .card .top {
-  text-align: center;
+  display: grid;
+  background-color: rgba(43, 110, 132, 0.539);
+  gap: 50px;
+  
 }
-
-.card img {
+h1.name{
+  align-self: center;
+  justify-self: flex-start;
+  position: absolute;
+  margin-left: 20px;
+  
+}
+.image{
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  margin-right: 20px;
+  width: 150px;
+  height: 150px;
+  justify-self: flex-end;
+  transform: translateY(29%);
+  border: 5px solid #f5ba13; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+img1{
+  border-radius: 50%;
+  margin-right: 20px;
+  width: 150px;
 
+}
+div.top img {
+  border-radius: 50%;
+  margin-right: 20px;
+  width: 150px;
+  height: 150px;
+  justify-self: flex-end;
+  transform: translateY(29%);
+  border: 5px solid #f5ba13; 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  
+}
 .card .bottom {
   padding: 16px;
+  position: relative;
+  height: 10vh;
 }
